# warp-crud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
database/: init.sql
src/: consts.rs  db.rs  lib.rs  main.rs
src/api/: comments_api.rs  mod.rs
src/handlers/: comments_handler.rs  mod.rs  res.rs
src/models/: comments.rs
src/test/: comments.rs  mod.rs  warp.rs
terraform/: README.md  app.json.tpl  cw.tf  ecr.tf  ecs.tf  lb.tf  provider.tf  push.sh  rds.tf  variables.tf
