[package]
edition = "2021"
name = "comments"
version = "0.1.0"

[[bin]]
name = "comments"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
tokio = {version = "1", features = ["full"]}
warp = "0.3"
